# kami-installer

./: Cargo.toml  README.md  README.txt
.github/workflows/: rust-linux.yml  rust-macos.yml  rust-windows.yml
src/: main.rs
